# coin-mcp

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml  server.py
coin_mcp/: __init__.py  aggregate.py  cache.py  ccxt_tools.py  coingecko.py  core.py  defillama.py  derivatives.py  dexscreener.py  indicators.py  prompts.py  resources.py  sentiment.py  transport.py
tests/: conftest.py  test_cache_routing.py  test_http_envelope.py  test_indicators.py  test_registry.py  test_validators.py
